--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "discord.js framework",
   "main": "index.js",
+  "types": "index.d.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
