--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "oversimple",
-  "version": "0.1.0",
-  "description": "discord.js framework",
-  "main": "index.js",
+  "name": "tests",
+  "version": "1.0.0",
+  "description": "",
+  "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "discord.js",
-    "framework"
-  ],
-  "author": "DeltaRade",
-  "license": "ISC"
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "request": "^2.88.0"
+  }
 }
