--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "tests",
-  "version": "1.0.0",
-  "description": "",
-  "main": "bot.js",
+  "name": "oversimple",
+  "version": "0.1.0",
+  "description": "discord.js framework",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "request": "^2.88.0"
-  }
+  "keywords": [
+    "discord.js",
+    "framework"
+  ],
+  "author": "DeltaRade",
+  "license": "ISC"
 }
