--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oversimple",
+  "name": "liberch",
   "version": "0.1.0",
   "description": "discord.js framework",
   "main": "index.js",
