--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "author": "DeltaRade",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.4.2",
-    "pg": "^7.8.0",
-    "sqlite3": "^4.0.4"
+    "discord.js": "^11.4.2"
   },
   "types": "index.d.ts"
 }
